Name:                   acid-cell
Version:                0.1.0
Author:                 Scott Murphy <scottmurphy09@gmail.com>
Maintainer:             Scott Murphy <scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Data.Acid.Cell
                        Data.Acid.Cell.Types
                        Data.Acid.Cell.TH
                        Data.Acid.Cell.TH.PathMakers
  Other-Modules:        Data.Acid.Cell.Internal                        
  Build-Depends:        base >= 4 && < 5
                      , unordered-containers == 0.2.3.3
                      , lens == 4.1.2
                      , text == 1.1.0.1
                      , system-filepath == 0.4.10
                      , system-fileio == 0.3.12
                      , mtl == 2.1.3.1
                      , stm == 2.4.3
                      , data-default == 0.5.3
                      , basic-prelude
                      , cereal == 0.4.0.1
                      , safecopy == 0.8.3.7569
                      , acid-state      == 0.12.1
                      , containers == 0.5.0.0
                      , bytestring == 0.10.0.2
                      , directed-keys == 0.1.2
                      , shelly
                      , template-haskell
                      , th-lift

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Other-Modules:        Data.Acid.Cell.Internal                        
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , unordered-containers
                      , mtl
                      , template-haskell
                      , lens
                      , cereal 
                      , text == 1.1.0.1
                      , hspec
                      , safecopy
                      , acid-state 
                      , containers
                      , bytestring
                      , basic-prelude
                      , directed-keys
                      , shelly
                      , system-fileio 
                      , stm
                      , th-lift
                      , system-filepath
Source-Repository head
  Type:                 git
--  Location:             
